k8s/infrastructure/configs/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab
  namespace: gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.k8s.murtadha.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: k8s-murtadha-dev-tls
      allowedRoutes:
        namespaces:
          from: All
